--- a/package.json
+++ b/package.json
@@ -1,485 +1,19 @@
 {
-  "name": "myblog",
+  "name": "sciencekill_blog",
   "version": "1.0.0",
   "description": "Sciencekill's blog",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "docs:build": "vuepress build src&&node --max_old_space_size=10240",
+    "docs:build": "vuepress build src",
     "docs:clean-dev": "vuepress dev src --clean-cache",
     "docs:dev": "vuepress dev src",
-    "docs:update-package": "npx vp-update"
+    "docs:update-package": "yarn dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.61",
-    "vue-template-compiler": "^2.7.14",
-    "vuepress": "2.0.0-beta.61",
-    "vuepress-plugin-search-pro": "^2.0.0-beta.216",
-    "vuepress-theme-hope": "2.0.0-beta.216"
-  },
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "dependencies": {
-    "abortcontroller-polyfill": "^1.7.5",
-    "acorn": "^8.8.2",
-    "ajv": "^8.12.0",
-    "ansi-regex": "^6.0.1",
-    "ansi-styles": "^6.2.1",
-    "anymatch": "^3.1.3",
-    "arg": "^5.0.2",
-    "argparse": "^2.0.1",
-    "array-buffer-byte-length": "^1.0.0",
-    "artalk": "^2.5.5",
-    "artplayer": "^5.0.9",
-    "assignment": "^2.0.0",
-    "async": "^3.2.4",
-    "at-least-node": "^1.0.0",
-    "autoprefixer": "^10.4.14",
-    "autosize": "^6.0.1",
-    "available-typed-arrays": "^1.0.5",
-    "babel-plugin-polyfill-corejs2": "^0.4.3",
-    "babel-plugin-polyfill-corejs3": "^0.8.1",
-    "babel-plugin-polyfill-regenerator": "^0.5.0",
-    "balanced-match": "^2.0.0",
-    "balloon-css": "^1.2.0",
-    "base64-js": "^1.5.1",
-    "bcp-47": "^2.1.0",
-    "bcp-47-match": "^2.0.3",
-    "bcp-47-normalize": "^2.2.0",
-    "bcrypt-ts": "^3.0.1",
-    "binary-extensions": "^2.2.0",
-    "bl": "^6.0.1",
-    "boolbase": "^1.0.0",
-    "brace-expansion": "^2.0.1",
-    "braces": "^3.0.2",
-    "browserslist": "^4.21.5",
-    "buffer": "^6.0.3",
-    "buffer-from": "^1.1.2",
-    "builtin-modules": "^3.3.0",
-    "cac": "^6.7.14",
-    "call-bind": "^1.0.2",
-    "camelcase": "^7.0.1",
-    "caniuse-lite": "^1.0.30001489",
-    "chalk": "^5.2.0",
-    "chart.js": "^4.3.0",
-    "cheerio": "^1.0.0-rc.12",
-    "cheerio-select": "^2.1.0",
-    "chokidar": "^3.5.3",
-    "cli-cursor": "^4.0.0",
-    "cli-spinners": "^2.9.0",
-    "cliui": "^8.0.1",
-    "clone": "^2.1.2",
-    "codem-isoboxer": "^0.3.9",
-    "color-convert": "^2.0.1",
-    "color-name": "^2.0.0",
-    "commander": "^10.0.1",
-    "comment-regex": "^2.0.0",
-    "common-tags": "^1.8.2",
-    "concat-map": "^0.0.2",
-    "connect-history-api-fallback": "^2.0.0",
-    "convert-source-map": "^2.0.0",
-    "core-js": "^3.30.2",
-    "core-js-compat": "^3.30.2",
-    "cose-base": "^2.2.0",
-    "cross-spawn": "^7.0.3",
-    "crypto-random-string": "^5.0.0",
-    "css-select": "^5.1.0",
-    "css-what": "^6.1.0",
-    "csstype": "^3.1.2",
-    "custom-event-polyfill": "^1.0.7",
-    "cytoscape": "^3.25.0",
-    "cytoscape-cose-bilkent": "^4.1.0",
-    "cytoscape-fcose": "^2.2.0",
-    "d3": "^7.8.4",
-    "d3-array": "^3.2.2",
-    "d3-axis": "^3.0.0",
-    "d3-brush": "^3.0.0",
-    "d3-chord": "^3.0.1",
-    "d3-color": "^3.1.0",
-    "d3-contour": "^4.0.2",
-    "d3-delaunay": "^6.0.4",
-    "d3-dispatch": "^3.0.1",
-    "d3-drag": "^3.0.0",
-    "d3-dsv": "^3.0.1",
-    "d3-ease": "^3.0.1",
-    "d3-fetch": "^3.0.1",
-    "d3-force": "^3.0.0",
-    "d3-format": "^3.1.0",
-    "d3-geo": "^3.1.0",
-    "d3-hierarchy": "^3.1.2",
-    "d3-interpolate": "^3.0.1",
-    "d3-path": "^3.1.0",
-    "d3-polygon": "^3.0.1",
-    "d3-quadtree": "^3.0.1",
-    "d3-random": "^3.0.1",
-    "d3-scale": "^4.0.2",
-    "d3-scale-chromatic": "^3.0.0",
-    "d3-selection": "^3.0.0",
-    "d3-shape": "^3.2.0",
-    "d3-time": "^3.1.0",
-    "d3-time-format": "^4.1.0",
-    "d3-timer": "^3.0.1",
-    "d3-transition": "^3.0.1",
-    "d3-zoom": "^3.0.0",
-    "dagre-d3-es": "^7.0.9",
-    "dashjs": "^4.7.0",
-    "dayjs": "^1.11.7",
-    "debug": "^4.3.4",
-    "decamelize": "^6.0.0",
-    "deepmerge": "^4.3.1",
-    "defaults": "^2.0.1",
-    "define-properties": "^1.2.0",
-    "delaunator": "^5.0.0",
-    "dijkstrajs": "^1.0.3",
-    "dir-glob": "^3.0.1",
-    "dom-serializer": "^2.0.0",
-    "domelementtype": "^2.3.0",
-    "domhandler": "^5.0.3",
-    "dompurify": "^3.0.3",
-    "domutils": "^3.1.0",
-    "echarts": "^5.4.2",
-    "ejs": "^3.1.9",
-    "electron-to-chromium": "^1.4.411",
-    "elkjs": "^0.8.2",
-    "emoji-regex": "^10.2.1",
-    "encode-utf8": "^2.0.0",
-    "entities": "^4.5.0",
-    "envinfo": "^7.8.1",
-    "es-abstract": "^1.21.2",
-    "es-set-tostringtag": "^2.0.1",
-    "es-to-primitive": "^1.2.1",
-    "es6-promise": "^4.2.8",
-    "esbuild": "^0.17.19",
-    "escalade": "^3.1.1",
-    "escape-string-regexp": "^5.0.0",
-    "esm": "^3.2.25",
-    "esprima": "^4.0.1",
-    "estree-walker": "^3.0.3",
-    "esutils": "^2.0.3",
-    "eve-raphael": "^0.5.0",
-    "execa": "^7.1.1",
-    "extend-shallow": "^3.0.2",
-    "fast-deep-equal": "^3.1.3",
-    "fast-glob": "^3.2.12",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fastq": "^1.15.0",
-    "fflate": "^0.8.0",
-    "filelist": "^1.0.4",
-    "fill-range": "^7.0.1",
-    "find-up": "^6.3.0",
-    "flowchart.ts": "^0.1.6",
-    "for-each": "^0.3.3",
-    "fraction.js": "^4.2.0",
-    "fs-extra": "^11.1.0",
-    "fs.realpath": "^1.0.0",
-    "function-bind": "^1.1.1",
-    "function.prototype.name": "^1.1.5",
-    "functions-have-names": "^1.2.3",
-    "gensync": "^1.0.0-beta.2",
-    "get-caller-file": "^2.0.5",
-    "get-intrinsic": "^1.2.1",
-    "get-own-enumerable-property-symbols": "^3.0.2",
-    "get-stream": "^7.0.0",
-    "get-symbol-description": "^1.0.0",
-    "giscus": "^1.2.8",
-    "glob": "^10.2.6",
-    "glob-parent": "^6.0.2",
-    "globals": "^13.20.0",
-    "globalthis": "^1.0.3",
-    "globby": "^13.1.4",
-    "gopd": "^1.0.1",
-    "graceful-fs": "^4.2.11",
-    "gray-matter": "^4.0.3",
-    "hanabi": "^0.4.0",
-    "has": "^1.0.3",
-    "has-bigints": "^1.0.2",
-    "has-flag": "^5.0.1",
-    "has-property-descriptors": "^1.0.0",
-    "has-proto": "^1.0.1",
-    "has-symbols": "^1.0.3",
-    "has-tostringtag": "^1.0.0",
-    "hash-sum": "^2.0.0",
-    "he": "^1.2.0",
-    "heap": "^0.2.7",
-    "hls.js": "^1.4.4",
-    "html-entities": "^2.3.3",
-    "htmlparser2": "^9.0.0",
-    "human-signals": "^5.0.0",
-    "iconv-lite": "^0.6.3",
-    "idb": "^7.1.1",
-    "ieee754": "^1.2.1",
-    "ignore": "^5.2.4",
-    "immediate": "^3.0.6",
-    "immutable": "^4.3.0",
-    "imsc": "^1.1.3",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "insane": "^2.6.2",
-    "internal-slot": "^1.0.5",
-    "internmap": "^2.0.3",
-    "is-alphabetical": "^2.0.1",
-    "is-alphanumerical": "^2.0.1",
-    "is-array-buffer": "^3.0.2",
-    "is-bigint": "^1.0.4",
-    "is-binary-path": "^2.1.0",
-    "is-boolean-object": "^1.1.2",
-    "is-callable": "^1.2.7",
-    "is-core-module": "^2.12.1",
-    "is-date-object": "^1.0.5",
-    "is-decimal": "^2.0.1",
-    "is-extendable": "^1.0.1",
-    "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^4.0.0",
-    "is-glob": "^4.0.3",
-    "is-interactive": "^2.0.0",
-    "is-module": "^1.0.0",
-    "is-negative-zero": "^2.0.2",
-    "is-number": "^7.0.0",
-    "is-number-object": "^1.0.7",
-    "is-obj": "^3.0.0",
-    "is-regex": "^1.1.4",
-    "is-regexp": "^3.1.0",
-    "is-shared-array-buffer": "^1.0.2",
-    "is-stream": "^3.0.0",
-    "is-string": "^1.0.7",
-    "is-symbol": "^1.0.4",
-    "is-typed-array": "^1.1.10",
-    "is-unicode-supported": "^1.3.0",
-    "is-weakref": "^1.0.2",
-    "isexe": "^2.0.0",
-    "jake": "^10.8.7",
-    "jest-worker": "^29.5.0",
-    "js-tokens": "^8.0.1",
-    "js-yaml": "^4.1.0",
-    "jsesc": "^3.0.2",
-    "json-schema": "^0.4.0",
-    "json-schema-traverse": "^1.0.0",
-    "json5": "^2.2.3",
-    "jsonfile": "^6.1.0",
-    "jsonpointer": "^5.0.1",
-    "katex": "^0.16.7",
-    "khroma": "^2.0.0",
-    "kind-of": "^6.0.3",
-    "layout-base": "^2.0.1",
-    "leven": "^4.0.0",
-    "lie": "^3.1.1",
-    "lilconfig": "^2.1.0",
-    "linkify-it": "^4.0.1",
-    "lit": "^2.7.4",
-    "lit-element": "^3.3.2",
-    "lit-html": "^2.7.4",
-    "loadjs": "^4.3.0-rc1",
-    "localforage": "^1.10.0",
-    "locate-path": "^7.2.0",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "lodash.debounce": "^4.0.8",
-    "lodash.sortby": "^4.7.0",
-    "log-symbols": "^5.1.0",
-    "lru-cache": "^9.1.1",
-    "magic-string": "^0.30.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8.6.7",
-    "markdown-it-container": "^3.0.0",
-    "markdown-it-emoji": "^2.0.2",
-    "marked": "^5.0.3",
-    "mathjax-full": "^3.2.2",
-    "mdurl": "^1.0.1",
-    "medium-zoom": "^1.0.8",
-    "merge-stream": "^2.0.0",
-    "merge2": "^1.4.1",
-    "mermaid": "^10.2.0",
-    "mhchemparser": "^4.2.1",
-    "micromatch": "^4.0.5",
-    "mimic-fn": "^4.0.0",
-    "minimatch": "^9.0.1",
-    "mitt": "^3.0.0",
-    "mj-context-menu": "^0.9.0",
-    "mpegts.js": "^1.7.3",
-    "ms": "^2.1.2",
-    "nanoid": "^4.0.2",
-    "node-releases": "^2.0.12",
-    "non-layered-tidy-tree-layout": "^2.0.2",
-    "normalize-path": "^3.0.0",
-    "normalize-range": "^0.1.2",
-    "npm-run-path": "^5.1.0",
-    "nth-check": "^2.1.1",
-    "object-inspect": "^1.12.3",
-    "object-keys": "^1.1.1",
-    "object.assign": "^4.1.4",
-    "once": "^1.4.0",
-    "onetime": "^6.0.0",
-    "option-validator": "^2.0.6",
-    "ora": "^6.3.1",
-    "p-limit": "^4.0.0",
-    "p-locate": "^6.0.0",
-    "p-try": "^3.0.0",
-    "parse5": "^7.1.2",
-    "parse5-htmlparser2-tree-adapter": "^7.0.0",
-    "path-browserify": "^1.0.1",
-    "path-exists": "^5.0.0",
-    "path-is-absolute": "^2.0.0",
-    "path-key": "^4.0.0",
-    "path-parse": "^1.0.7",
-    "path-type": "^5.0.0",
-    "photoswipe": "^5.3.7",
-    "picocolors": "^1.0.0",
-    "picomatch": "^2.3.1",
-    "plyr": "^3.7.8",
-    "pngjs": "^7.0.0",
-    "postcss": "^8.4.23",
-    "postcss-load-config": "^4.0.1",
-    "postcss-value-parser": "^4.2.0",
-    "pretty-bytes": "^6.1.0",
-    "prismjs": "^1.29.0",
-    "punycode": "^2.3.0",
-    "qrcode": "^1.5.3",
-    "queue-microtask": "^1.2.3",
-    "randombytes": "^2.1.0",
-    "rangetouch": "^2.0.1",
-    "raphael": "^2.3.0",
-    "readable-stream": "^4.4.0",
-    "readdirp": "^3.6.0",
-    "regenerate": "^1.4.2",
-    "regenerate-unicode-properties": "^10.1.0",
-    "regenerator-runtime": "^0.13.11",
-    "regenerator-transform": "^0.15.1",
-    "regexp.prototype.flags": "^1.5.0",
-    "regexpu-core": "^5.3.2",
-    "register-service-worker": "^1.7.2",
-    "regjsparser": "^0.10.0",
-    "require-directory": "^2.1.1",
-    "require-from-string": "^2.0.2",
-    "require-main-filename": "^2.0.0",
-    "resolve": "^1.22.2",
-    "restore-cursor": "^4.0.0",
-    "reusify": "^1.0.4",
-    "reveal.js": "^4.5.0",
-    "robust-predicates": "^3.0.2",
-    "rollup": "^3.23.0",
-    "run-parallel": "^1.2.0",
-    "rw": "^1.3.3",
-    "safe-buffer": "^5.2.1",
-    "safe-regex-test": "^1.0.0",
-    "safer-buffer": "^2.1.2",
-    "sass": "^1.62.1",
-    "sax": "^1.2.1",
-    "section-matter": "^1.0.0",
-    "semver": "^7.5.1",
-    "serialize-javascript": "^6.0.1",
-    "set-blocking": "^2.0.0",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^4.0.0",
-    "side-channel": "^1.0.4",
-    "signal-exit": "^4.0.2",
-    "sitemap": "^7.1.1",
-    "slash": "^5.1.0",
-    "source-map": "^0.7.4",
-    "source-map-js": "^1.0.2",
-    "source-map-support": "^0.5.21",
-    "sourcemap-codec": "^1.4.8",
-    "speech-rule-engine": "^4.1.0-beta.4",
-    "sprintf-js": "^1.0.3",
-    "string-width": "^6.1.0",
-    "string.prototype.matchall": "^4.0.8",
-    "string.prototype.trim": "^1.2.7",
-    "string.prototype.trimend": "^1.0.6",
-    "string.prototype.trimstart": "^1.0.6",
-    "string_decoder": "^1.3.0",
-    "stringify-object": "^5.0.0",
-    "strip-ansi": "^7.0.1",
-    "strip-bom-string": "^1.0.0",
-    "strip-comments": "^2.0.1",
-    "strip-final-newline": "^3.0.0",
-    "striptags": "^3.2.0",
-    "stylis": "^4.2.0",
-    "supports-color": "^9.3.1",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "temp-dir": "^3.0.0",
-    "tempy": "^3.0.0",
-    "terser": "^5.17.6",
-    "to-fast-properties": "^4.0.0",
-    "to-regex-range": "^5.0.1",
-    "tr46": "^4.1.1",
-    "ts-debounce": "^4.0.0",
-    "ts-dedent": "^2.2.0",
-    "tslib": "^2.5.2",
-    "twikoo": "^1.6.16",
-    "type-fest": "^3.11.0",
-    "typed-array-length": "^1.0.4",
-    "ua-parser-js": "^1.0.35",
-    "uc.micro": "^1.0.6",
-    "unbox-primitive": "^1.0.2",
-    "unicode-canonical-property-names-ecmascript": "^2.0.0",
-    "unicode-match-property-ecmascript": "^2.0.0",
-    "unicode-match-property-value-ecmascript": "^2.1.0",
-    "unicode-property-aliases-ecmascript": "^2.1.0",
-    "unique-string": "^3.0.0",
-    "universalify": "^2.0.0",
-    "upath": "^2.0.1",
-    "update-browserslist-db": "^1.0.11",
-    "uri-js": "^4.4.1",
-    "url-polyfill": "^1.1.12",
-    "util-deprecate": "^1.0.2",
-    "uuid": "^9.0.0",
-    "vite": "^4.3.9",
-    "vue-router": "^4.2.1",
-    "vuepress-plugin-auto-catalog": "^2.0.0-beta.216",
-    "vuepress-plugin-blog2": "^2.0.0-beta.216",
-    "vuepress-plugin-comment2": "^2.0.0-beta.216",
-    "vuepress-plugin-components": "^2.0.0-beta.216",
-    "vuepress-plugin-copy-code2": "^2.0.0-beta.216",
-    "vuepress-plugin-copyright2": "^2.0.0-beta.216",
-    "vuepress-plugin-feed2": "^2.0.0-beta.216",
-    "vuepress-plugin-md-enhance": "^2.0.0-beta.216",
-    "vuepress-plugin-photo-swipe": "^2.0.0-beta.216",
-    "vuepress-plugin-pwa2": "^2.0.0-beta.216",
-    "vuepress-plugin-reading-time2": "^2.0.0-beta.216",
-    "vuepress-plugin-rtl": "^2.0.0-beta.216",
-    "vuepress-plugin-sass-palette": "^2.0.0-beta.216",
-    "vuepress-plugin-seo2": "^2.0.0-beta.216",
-    "vuepress-plugin-sitemap2": "^2.0.0-beta.216",
-    "vuepress-shared": "^2.0.0-beta.216",
-    "vuepress-vite": "^2.0.0-beta.45",
-    "wcwidth": "^1.0.1",
-    "web-worker": "^1.2.0",
-    "webidl-conversions": "^7.0.0",
-    "webworkify-webpack": "^2.1.5",
-    "whatwg-url": "^12.0.1",
-    "which": "^3.0.1",
-    "which-boxed-primitive": "^1.0.2",
-    "which-module": "^2.0.1",
-    "which-typed-array": "^1.1.9",
-    "wicked-good-xpath": "^1.3.0",
-    "workbox-background-sync": "^6.6.0",
-    "workbox-broadcast-update": "^6.6.0",
-    "workbox-build": "^6.6.0",
-    "workbox-cacheable-response": "^6.6.0",
-    "workbox-core": "^6.6.0",
-    "workbox-expiration": "^6.6.0",
-    "workbox-google-analytics": "^6.6.0",
-    "workbox-navigation-preload": "^6.6.0",
-    "workbox-precaching": "^6.6.0",
-    "workbox-range-requests": "^6.6.0",
-    "workbox-recipes": "^6.6.0",
-    "workbox-routing": "^6.6.0",
-    "workbox-strategies": "^6.6.0",
-    "workbox-streams": "^6.6.0",
-    "workbox-sw": "^6.6.0",
-    "workbox-window": "^6.6.0",
-    "wrap-ansi": "^8.1.0",
-    "wrappy": "^1.0.2",
-    "xml-js": "^1.6.11",
-    "xmldom-sre": "^0.9.0-beta.7",
-    "y18n": "^5.0.8",
-    "yallist": "^4.0.0",
-    "yaml": "^2.3.1",
-    "yargs": "^17.7.2",
-    "yargs-parser": "^21.1.1",
-    "zrender": "^5.4.1"
-  },
-  "keywords": [],
-  "author": "AdvancedCube <sciencekill@outlook.com>",
-  "repository": "https://github.com/sciencekiller/my_blog.git"
+    "@vuepress/client": "2.0.0-beta.63",
+    "vue": "^3.2.47",
+    "vuepress": "2.0.0-beta.63",
+    "vuepress-theme-hope": "2.0.0-beta.227"
+  }
 }
