--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuepress/client": "2.0.0-beta.63",
     "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.63",
+    "vuepress-plugin-mathjax": "^1.2.8",
     "vuepress-theme-hope": "2.0.0-beta.227"
   }
 }
